src/routes/Header/Menu.scss
nav {
  @apply flex justify-center flex-row pr-[2vw] lg:pr-[6vw];
  // border: 2px solid #fff;

  .Links {
      @apply flex gap-4;
  }

  .Menu-Container {
      .Menu-Wrapper {
          background-color: rgb(0, 0, 0);
          backdrop-filter: blur(12px);
          @apply fixed flex top-14 left-0 justify-center;
          @apply w-[100vw] h-[100vh];
          animation: MenuAnimation ease-in-out .8s;
      }

      .Menu {
          @apply w-[100vw];
      }

      @keyframes MenuAnimation {
          0% {
              top: -30vh;
          }

          100% {
              @apply top-14;
          }
      }
  }
}

.Menu-Button {
  @apply border-none bg-black;
}

